non-compatible/tests/ecc-gcp-337-firewall_allows_internet_traffic_VNC-Server/placebo-green/get-compute-v1-projects-cloud-custodian-global-firewalls_1.json
{
  "headers": {
    "etag": "htC7a39oIjQ704On9a_OSb0XRCY=/53UL9aD8bc3vooF17K09a0_kILI=",
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Fri, 20 Jan 2023 08:14:41 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "alt-svc": "h3=\":443\"; ma=2592000,h3-29=\":443\"; ma=2592000,h3-Q050=\":443\"; ma=2592000,h3-Q046=\":443\"; ma=2592000,h3-Q043=\":443\"; ma=2592000,quic=\":443\"; ma=2592000; v=\"46,43\"",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "6816",
    "-content-encoding": "gzip",
    "content-location": "https://compute.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls?alt=json"
  },
  "body": {
    "kind": "compute#firewallList",
    "id": "projects/cloud-custodian/global/firewalls",
    "items": [
      {
        "kind": "compute#firewall",
        "id": "5891369680612357030",
        "creationTimestamp": "2023-01-20T00:14:01.324-08:00",
        "name": "no-vnc-server-from-internet-337-green",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 1000,
        "sourceRanges": [
          "10.0.0.0/16"
        ],
        "allowed": [
          {
            "IPProtocol": "tcp",
            "ports": [
              "5900"
            ]
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/no-vnc-server-from-internet-337-green"
      }
    ],
    "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls"
  }
}
